fix white-space wrapping

--- a/src/zip-manager/styles/Base.css
+++ b/src/zip-manager/styles/Base.css
@@ -51,6 +51,7 @@ button {
   background-color: var(--bg-button-color);
   color: var(--button-color);
   font-size: 0.8rem;
+  white-space: nowrap;
 }
 
 button:disabled {
